The scores in leagues will now be updated live

--- a/manager.client/src/app/league/league.component.css
+++ b/manager.client/src/app/league/league.component.css
@@ -3,6 +3,8 @@
     border-radius: var(--border-radius);
 
     border: 2px solid var(--accent-primary);
+
+    box-shadow: 0 0px 8px var(--black);
 }
 
 .placeholder {
