--- a/manager.client/src/app/league/standings/standings.component.html
+++ b/manager.client/src/app/league/standings/standings.component.html
@@ -1,7 +1,8 @@
 <section>
   <div *ngIf="leagueData" class="table">
     <h2 class="table-title">Current Standings</h2>
-    @for (league of leagueData.standings.results; track league) {
+
+    @if (!liveScores) { @for (league of leagueData.standings.results; track $index) {
     <ul>
       <li class="table-entry">
         <div class="table-entry-left">
@@ -15,10 +16,30 @@
         </div>
         <div class="table-right">
           <div class="table-week-points">{{ league.event_total }}</div>
+
           <div class="table-total-points">{{ league.total }}</div>
         </div>
       </li>
     </ul>
-    }
+    } } @else { @for (league of leagueData.standings.results; track $index) {
+    <ul>
+      <li class="table-entry">
+        <div class="table-entry-left">
+          <div>
+            <div class="table-team-position">{{ league.rank }}</div>
+          </div>
+          <div>
+            <div class="table-team-name">{{ league.entry_name }}</div>
+            <div class="table-player-name">{{ league.player_name }}</div>
+          </div>
+        </div>
+        <div class="table-right">
+          <div class="table-week-points live-points">{{ liveScores[league.entry] }}</div>
+
+          <div class="table-total-points live-points">{{ liveScores[league.entry] + league.total }}</div>
+        </div>
+      </li>
+    </ul>
+    } }
   </div>
 </section>
