Stats component in the league page

--- a/manager.client/src/app/league/league.component.html
+++ b/manager.client/src/app/league/league.component.html
@@ -6,7 +6,7 @@
 
 <main id="main">
   @if (leagueData) {
-  <div class="title placeholder">{{ leagueData.league.name }}</div>
+  <div class="title placeholder">{{ leagueData.name }}</div>
   } @else {
   <div class="placeholder">No League Selected</div>
   }
