Team is now displayed

--- a/manager.client/src/app/personal/personal.component.html
+++ b/manager.client/src/app/personal/personal.component.html
@@ -4,11 +4,10 @@
 
 <main id="main">
   <div id="row-1">
-    <fixtures id="fixtures" class="content"></fixtures>
-    <div class="placeholder content">Placeholder</div>
+    <team-picks id="team-picks">Placeholder</team-picks>
   </div>
   <div id="row-2">
-    <div class="placeholder content">Placeholder</div>
+    <fixtures id="fixtures" class="content"></fixtures>
     <div class="placeholder content">Placeholder</div>
   </div>
 </main>
