--- a/manager.client/src/app/personal/personal.component.css
+++ b/manager.client/src/app/personal/personal.component.css
@@ -10,7 +10,7 @@
     margin-bottom: 1rem;
 }
 
-#fixtures {
+#team-picks {
     margin-right: 1rem;
     flex-grow: 1;
 }
@@ -45,7 +45,12 @@
         flex-direction: column;
     }
 
-    #fixtures {
+    #row-2 {
+        flex-direction: column;
+    }
+
+
+    #team-picks {
         margin-right: 0;
         margin-bottom: 1rem;
     }
