--- a/manager.client/src/app/nav/nav.component.html
+++ b/manager.client/src/app/nav/nav.component.html
@@ -2,7 +2,7 @@
   <div (click)="goToHome()" class="site-name">FPL Analyst</div>
   <a href="{{ personalLink }}" class="nav-page link {{ linkActive }}">Personal</a>
   <a href="{{ leagueLink }}" class="nav-page link {{ linkActive }}">League</a>
-  <a href="/" id="about" class="nav-page link">About</a>
+  <!-- <a href="/" id="about" class="nav-page link">About</a> -->
   <div (click)="sidebarActive = !sidebarActive" class="clickable">
     <div *ngIf="teamName" class="team-nav-display">
       <div class="team-name">{{ teamName }}</div>
@@ -30,5 +30,5 @@
   </div>
   <a href="{{ personalLink }}" class="nav-page link {{ linkActive }} sidebar-link">Personal</a>
   <a href="{{ leagueLink }}" class="nav-page link {{ linkActive }} sidebar-link">League</a>
-  <a href="/" id="about" class="nav-page link">About</a>
+  <!-- <a href="/" id="about" class="nav-page link">About</a> -->
 </div>
