--- a/manager.client/src/app/league/history/history.component.css
+++ b/manager.client/src/app/league/history/history.component.css
@@ -72,8 +72,14 @@
 }
 
 @media screen and (max-width: 700px) {
+    .chart-scroll {
+        width: calc(100vw - 2rem);
+        overflow-x: scroll;
+        position: relative;
+    }
+
     .chart-container {
-        width: calc(100vw - 4rem);
+        width: 40rem;
     }
 
     .chart-flex {
