--- a/manager.client/src/app/personal/fixtures/fixtures.component.html
+++ b/manager.client/src/app/personal/fixtures/fixtures.component.html
@@ -1,5 +1,12 @@
 <section>
   <div class="fixtures-chart">
+    @if (!hasFixtures) {
+    <h2>Upcoming fixture difficulty</h2>
+    <div class="centered">
+      <h3>There are currently no upcoming fixtures</h3>
+    </div>
+    } @else {
+
     <div class="chart-title">
       <div>Next 5 Fixtures Difficulty</div>
       <div class="chart-legend">
@@ -11,6 +18,7 @@
         <div>Difficult</div>
       </div>
     </div>
+
     <div class="chart-container">
       <canvas
         class="chart"
@@ -22,6 +30,7 @@
       >
       </canvas>
     </div>
+    }
   </div>
   <!-- <div *ngIf="upcomingFixtures" class="fixture-component">
     <div *ngFor="let fixtures of upcomingFixtures" class="fixture-entry">
