--- a/manager.client/src/app/personal/personal.component.html
+++ b/manager.client/src/app/personal/personal.component.html
@@ -7,7 +7,8 @@
     <team-picks id="team-picks">Placeholder</team-picks>
   </div>
   <div id="row-2">
-    <fixtures id="fixtures" class="content"></fixtures>
-    <div class="placeholder content">Placeholder</div>
+    <fixtures id="fixtures" class="content">
+    </fixtures>
+    <!--<div class="placeholder content">Placeholder</div>-->
   </div>
 </main>
